[package]
name = "wasmrun"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.22.0"
wasmtime-wasi = "0.22.0"
wasmer-runtime = "0.17.1"
libc = "0.2.82"
libloading = "0.6.7"
rlua = "0.17.0"
